--- a/22-transform.qmd
+++ b/22-transform.qmd
@@ -72,6 +72,14 @@ $$A_t = \frac{Y_t}{S_t}.$$
 For example, an observed value of 100 with a seasonal factor of 1.08 would result in a seasonally adjusted value of 100 / 1.08 = 92.6.
 In a multiplicative model, values of $S_t > 1$ decrease the observed value, and $S_t < 1$ increase it.
 
+When analyzing seasonal components, the transformation is crucial.
+For example, `monthplot()` plots the evolution of the seasonal component for each period over time (shown by the evolving red line; the red bar shows its average). If the model is multiplicative, the seasonal component is a factor ranging from 0.8 to about 1.3. If the model is additive, the seasonal component is a summand ranging from about -100 airpassengers to about +130.
+
+```{r}
+monthplot(m_log)
+monthplot(m_none)
+```
+
 For a multiplicative adjustment, it is sufficient to apply logarithms to the initial series and then re-transform the results following the decomposition.
 With no transformation, X-13 will perform an additive seasonal adjustment as specified in @eq-additive.
 With log transformation, X-13 will perform a multiplicative adjustment as specified in @eq-multiplicative.
