--- a/22-transform.qmd
+++ b/22-transform.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("course_complete", "2022-12-21", section = "Transform")  # drafting, polishing, complete
+status("course_complete", "2023-12-21", section = "Transform")  # drafting, polishing, complete
 ```
 
 ```{=html}
@@ -20,11 +20,13 @@ status("course_complete", "2022-12-21", section = "Transform")  # drafting, poli
 -   Case Study idea: Decide between log vs non-log transformation
  -->
 ```
-
 In seasonal adjustment, one of the first choices is whether a series needs to be transformed before modeling.
-Two types of transformation types typically occur within X-13, *transformations* and *prior modifications*. Prior modifications are relatively rarely used and will be covered in the second section. Tranformations, especially lograitmic transformations, are ubiquitous and central to many seasonal adjustment models.
+Two types of transformation types typically occur within X-13, *transformations* and *prior modifications*.
+Prior modifications are relatively rarely used and will be covered in the second section.
+Tranformations, especially lograitmic transformations, are ubiquitous and central to many seasonal adjustment models.
 
-Below is our standard example. As we have seen before, the automated procedures of X-13 opt for a logarithmic transformation of the series.
+Below is our standard example.
+As we have seen before, the automated procedures of X-13 opt for a logarithmic transformation of the series.
 
 ```{r}
 m_log  <- seas(AirPassengers, x11 = "")
@@ -32,18 +34,19 @@ summary(m_log)
 plot(m_log)
 ```
 
-If we manually override the transformation function to be `"none"`, this results in a very different model and seasonal adjustment. Not only are the model specification and the coefficients very different, the resulting series has a much higher volatility in later years.
+If we manually override the transformation function to be `"none"`, this results in a very different model and seasonal adjustment.
+Not only are the model specification and the coefficients very different, the resulting series has a much higher volatility in later years.
 
 ```{r}
 m_none <- seas(AirPassengers, x11 = "", transform.function = "none")
 summary(m_none)
 plot(m_none)
 ```
+
 Why is the tranformation function so important?
 
 In fact, applying a logaritimc transformation is equivalent of estimating a multiplicative seasonal adjusment model.
 This is one of the most fundamental decisions during seasonal adjustment.
-
 
 ## Additive and multiplicative adjustment {#sec-additive-and-multiplicative-adjustment}
 
@@ -58,7 +61,7 @@ The goal of seasonal adjustment is to subtract the seasonal component:
 
 $$A_t = Y_t - S_t.$$
 
-For example, an observed value of 100 with a seasonal factor of 3.2 would result in a seasonally adjusted value of 100 - 3.2 = 96.8.
+For example, an observed value of 100 with a seasonal compontent of -3.2 would result in a seasonally adjusted value of 100 - 3.2 = 96.8.
 
 Alternatively, the decomposition can be *multiplicative*:
 
@@ -73,7 +76,9 @@ For example, an observed value of 100 with a seasonal factor of 1.08 would resul
 In a multiplicative model, values of $S_t > 1$ decrease the observed value, and $S_t < 1$ increase it.
 
 When analyzing seasonal components, the transformation is crucial.
-For example, `monthplot()` plots the evolution of the seasonal component for each period over time (shown by the evolving red line; the red bar shows its average). If the model is multiplicative, the seasonal component is a factor ranging from 0.8 to about 1.3. If the model is additive, the seasonal component is a summand ranging from about -100 airpassengers to about +130.
+For example, `monthplot()` plots the evolution of the seasonal component for each period over time (shown by the evolving red line; the red bar shows its average).
+If the model is multiplicative, the seasonal component is a factor ranging from 0.8 to about 1.3.
+If the model is additive, the seasonal component is a summand ranging from about -100 airpassengers to about +130.
 
 ```{r}
 monthplot(m_log)
@@ -83,7 +88,6 @@ monthplot(m_none)
 For a multiplicative adjustment, it is sufficient to apply logarithms to the initial series and then re-transform the results following the decomposition.
 With no transformation, X-13 will perform an additive seasonal adjustment as specified in @eq-additive.
 With log transformation, X-13 will perform a multiplicative adjustment as specified in @eq-multiplicative.
-
 
 ## Automated transformation choice {#sec-auto-transform}
 
@@ -97,22 +101,24 @@ For most practical purposes, the automatic selection mechanism is quite reliable
 However, if your data series contains negative values, logarithmic transformation is not feasible, and the software will automatically adapt its selection process accordingly.
 
 <!-- either discuss, or dont mention -->
+
 <!-- Other restrictions on the allowed transformations exist, but these situations are rare. -->
 
-To examine the outcomes of these transformation tests, one can refer to specific statistics:
-The `udg()` function grants access to broad array of diagnostic statistics.
-The `qs()` function and the `AIC()`, `BIC()` and `logLik()` methods are wrappers that use `udg()` to access some specific diagnostical statistics. For example, if we want to access teh AICc values that were used to determine the appropriatness of the logaritmic model, we use:
+To examine the outcomes of these transformation tests, one can refer to specific statistics: The `udg()` function grants access to broad array of diagnostic statistics.
+The `qs()` function and the `AIC()`, `BIC()` and `logLik()` methods are wrappers that use `udg()` to access some specific diagnostical statistics.
+For example, if we want to access teh AICc values that were used to determine the appropriatness of the logaritmic model, we use:
 
 ```{r}
 m <- seas(AirPassengers)
 udg(m, c("aictest.trans.aicc.nolog", "aictest.trans.aicc.log"))
 ```
 
-The AICc for the log transformed model is lower than the for the untransformed one. That is why the automated procedure has selected a log transformation, as we have seen previously in @sec-getting-started.
-
+The AICc for the log transformed model is lower than the for the untransformed one.
+That is why the automated procedure has selected a log transformation, as we have seen previously in @sec-getting-started.
 
 <!-- CHR: seems more useful to me to introduce out() at a later stage, when we are acutally using for something. -->
 
+````{=html}
 <!--
     The same infor transformation can also be found in many other places such as the HTML output with `out(m)` or the udg with argument name `aictrans` such as `udg(m, "aictrans")`.
 
@@ -128,9 +134,7 @@ out(m)
 ```
 :::
  -->
-
-
-
+````
 
 ## Prior modifications
 
@@ -145,7 +149,6 @@ Temporary modifications are removed while calculating seasonal factors but added
 
 In most cirumstances, incorporating external effects in a seasonal adjustment model would be left to the regression part in regARIMA, and will be covered in @sec-regarima.
 
-
 ## Transform options
 
 <!-- CHS not investing time on this, we previously did a scraping of the X-13 handbook and Andrea could derive some functionality to include a table with all options for each spec. -->
@@ -154,24 +157,27 @@ The `transform` spec controls these options.
 Some primary options within this spec are
 
 | Spec option          | Use                                            | Example values        | default |
-|-----------------|-----------------|---------------------|-----------------|
+|-----------------|-----------------|--------------------|-----------------|
 | `transform.function` | Transform function                             | `none`, `log`, `auto` | `none`  |
 | `transform.aicdiff`  | adjust tolerance of AIC test for log transform | `0.0`, `3.0`, `-4.5`  | `-2.0`  |
 | `xtrans`             | Prior adjustment factor                        | `seas(m, xtrans = y)` | `NULL`  |
 
-
 ## Case Study: `AirPassengers`
 
-
-
+```{=html}
 <!--
 
 Should AirPassengers always be the text example, and 'Case Study' be left for more interesting examples. I think so!
 
 
  -->
-
-Why does `AirPassengers` seem to follow a multiplicative model of seasonal adjusmtent? The answer is *heteroskadasticity*, or a varying variance. As the number of air passengers grow over time, so does their seasonality. With just a few people flying, we would expect the seasonal component to be small in absolute numbers. With many people using airplanes, the seasonal component is bigger in absolute numbers. In such a series, it makes more sense describe seasonality in a multiplicative model, and thus to log tranform the series before modeling.
+```
+Why does `AirPassengers` seem to follow a multiplicative model of seasonal adjusmtent?
+The answer is *heteroskadasticity*, or a varying variance.
+As the number of air passengers grow over time, so does their seasonality.
+With just a few people flying, we would expect the seasonal component to be small in absolute numbers.
+With many people using airplanes, the seasonal component is bigger in absolute numbers.
+In such a series, it makes more sense describe seasonality in a multiplicative model, and thus to log tranform the series before modeling.
 
 This is a characteric of many economic time series, wich often exibit a growth in the trend.
 
@@ -233,7 +239,6 @@ transformfunction(m2)
 
 ## Exercises
 
-1. Use *seasonal* to perform an automated seasonal adjustment of `mdeaths`.
+1.  Use *seasonal* to perform an automated seasonal adjustment of `mdeaths`.
 
-2. Compute `"aictest.trans.aicc.nolog"` and `"aictest.trans.aicc.log"` and compare these values.
-
+2.  Compute `"aictest.trans.aicc.nolog"` and `"aictest.trans.aicc.log"` and compare these values.
