--- a/24-x11.qmd
+++ b/24-x11.qmd
@@ -17,24 +17,56 @@ library(tsbox)
 
  -->
 ```
-One of the two main methods available in X-13ARIMA-SEATS to extract trend and seasonal components is the X-11 method.
-This is a nonparametric procedure that works by passing moving-average filters over the data to extract the intended components.
-Since both X-11 and SEATS apply filters to time-series, we start with a general discussion on seasonal decomposition that applies both to X-11 and STEATS.
-SEATS will be discussed in greater detail in @sec-seats.
 
-## Seasonal decomposition {#sec-seasonal-decomposition}
+In seasonal adjustment, the fundamental task is to decompose a series into its constituent components: **trend (T_t)**, **seasonal (S_t)**, and **irregular (I_t)**. X-13ARIMA-SEATS offers two main techniques for this task: the X-11 method and SEATS.
+Ultimately, both X-11 and SEATS estimate the components $T_t$, $S_t$, $I_t$ by passing moving average filters over the series.
 
-As we have seen in the previous chapters, the core of seasonal adjustment is the decomposition of a time series into a **trend**, a **seasonal** and and **irregular** component.
-As we have seen in @sec-additive-and-multiplicative-adjustment, we write the fundamental identity as:
+In this chapter, we will discuss X-11, one of the two main methods available.
+X-11 is a nonparametric procedure that works by passing predefined moving-average filters over the data. (SEATS derives the moving-average filters from the underlying ARIMA model and will be discussed in in @sec-seats.)
+
+
+
+As established in previous chapters and in @sec-additive-and-multiplicative-adjustment, the fundamental identity for an additive decomposition model is expressed as:
 
 $$
 X_t = T_t + S_t + I_t
 $$
 
+Here, $X_t$ represents the observed time series. The seasonally adjusted series for an additive decomposition is then calculated as:
+
+$$
+A_t = X_t - S_t
+$$
+
+For a multiplicative decomposition model, the identity and adjusted series are represented differently:
+
+$$
+X_t = T_t \cdot S_t \cdot I_t
+$$
+
+$$
+A_t = \frac{X_t}{S_t}
+$$
+
+
+## Fundamental Identity of Seasonal Decomposition {#sec-seasonal-decomposition}
+
+As established in @sec-additive-and-multiplicative-adjustment, the fundamental identity for an additive decomposition model is expressed as:
+
+$$
+X_t = T_t + S_t + I_t
+$$
+
+Here, $X_t$ represents the observed time series. The seasonally adjusted series for an additive decomposition is then calculated as:
+
+$$
+A_t = X_t - S_t
+$$
+
 where, $X_t$ is the observed time series, $T_t$ the trend, $S_t$ the seasonal component and $I_t$ the irregular component.
 Once the decomposition is done, the seasonally adjusted series for an additive[^24-x11-1] decomposition can be computed as:
 
-[^24-x11-1]: For a multiplicative decomposition, the fundamental identity is
+[^24-x11-1]: For a multiplicative decomposition model, the identity and adjusted series are represented differently:
 
     $$
     X_t = T_t \cdot S_t \cdot I_t
@@ -46,23 +78,39 @@ Once the decomposition is done, the seasonally adjusted series for an additive[^
     A_t = \frac{X_t}{S_t}
     $$
 
-$$
-A_t = X_t - S_t
-$$
 
-How to perform the seasonal decomposition?
-Ultimately, both X-11 and SEATS estimate the components $T_t$, $S_t$, $I_t$ by passing moving average filters over the series.
-In order to get unbiased results at the margin, the underlying series is usually extended by forecasts from the regARIMA model discussed in the @sec-regarima.
-This regARIMA model also serves as the foundation of the initial steps in the X11 algorithm to remove outliers and other regression effects before application of moving-averages.
 
-How do we apply moving average filters over a series?
-The **trend component** can be estimated by applying a moving average over the observed series.
-For each point in time, an simple average that uses a certain number of observations both on the left and the right of the series.
-Because the window is symmetric, we need the series extended by forecasts and backcasts.
+## Applying Moving Average Filters for Decomposition
+
+Both X-11 and SEATS achieve the decomposition by applying moving average filters over the series. To ensure unbiased results at the series' margins, forecasts from the regARIMA model (@sec-regarima) are used to extend the series. The regARIMA model model also serves as the foundation of the initial steps in the X-11 algorithm to remove outliers and other regression effects before application of moving-averages.
+
+
+### Estimating the Trend Component
+
+X-11 starts by estimating the **trend component**.
+The trend component is estimated by applying a symmetric moving average over the series. Each point in time is averaged using a set number of observations to the left and right of the series.
+Because the window is symmetric, we need the series to be extended by forecasts and backcasts.
 
 Once the trend component is computed, we can subtract it from the original series to compute a *detrended series*.
 
-## A simple decomposition in R {#sec-simple-decomposition}
+
+### Estimating the Seasonal Component
+
+To estimate the seasonal component, a *seasonal filter* is applied to the detrended series. A seasonal filter is a symmetric moving average that is calculated by taking the mean of the same period across several years.
+For instance, the average for January would be computed using all the January values from the time series data, February would use all February values, and so on.
+
+
+<!--
+    FIXME
+
+    More formally, the seasonal filter can be expressed as follows:
+
+ -->
+
+
+
+
+## R-Fundamentals: A Simple Decomposition {#sec-simple-decomposition}
 
 In order to better understand the X-11 method, it will be helpful to first perform a basic seasonal adjustment procedure "by-hand".
 A basic trend filter could be a simple 2x12 moving average.
@@ -168,7 +216,7 @@ Being able to understand the
 When using the x11 spec you can change the length of the filter used for the trend and seasonal components with the `trendma` and `seasonalma` arguments respectively.
 Additionally, `sigmalim` will control the amount of extreme value adjustment that is done during the seasonal adjustment.
 
-## Frequency domain of time series (optional)
+## Frequency Domain of time series (optional)
 
 We present the following as optional reading material.
 For those interesting in simply performing seasonal adjustment, an understanding of the frequency domain of a time series, is not mandatory.
